--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,34 @@
 table {
-  width: 50%;
+  width: 95%;
   margin-top: 5%;
-  margin-right: 25%;
-  margin-left: 25%
+  margin-right: 2.5%;
+  margin-left: 2.5%
 }
 
 tr#first-row {
+  font-size: 1.8em;
   background-color: #3265cd;
+}
+
+h4, p  {
+  margin-top: 2px;
+  padding-left: 10px;
 }
 
 td {
   padding: 2px;
-  height: 45px;
+  height: 120px;
   width: 33%;
   border: 1px solid black;
 }
 
-input {
+textarea {
+  font-size: 1.5em;
   height: 98%;
   width: 98%;
+}
+
+button {
+  height: 100%;
+  background-color: #3265ff;
 }
